--- a/pratices/todoapp/package.json
+++ b/pratices/todoapp/package.json
@@ -12,6 +12,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
+    "valid": "^0.1.1",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
