--- a/clothingShop/shop/package.json
+++ b/clothingShop/shop/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "concurrently": "^7.5.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch ./server/db.json --port 9000"
+    "server": "json-server --watch ./server/db.json --port 9000",
+    "shop": "concurrently \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
