--- a/redux-todos/package.json
+++ b/redux-todos/package.json
@@ -7,22 +7,28 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.0",
+    "concurrently": "^7.6.0",
     "formik": "^2.2.9",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "reselect": "^4.1.7",
     "sass": "^1.56.1",
-    "uuidv4": "^6.2.13",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch --host 0.0.0.0 ./server/db.json --port 9000",
+    "app": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
